# PMcore

./: .env.example  .gitignore  README.md  phase1-detailed-design.md  pmdesign.md  pyproject.toml
reports/: test-report-2026-03-11-phase1-regression.md
src/polymarket_app/: __init__.py  main.py
src/polymarket_app/config/: __init__.py  logging.py  settings.py
tests/cli/: test_cli_bootstrap.py
tests/unit/: test_logging.py  test_settings.py
