[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcore"
version = "0.1.0"
description = "Polymarket backend core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "structlog>=24.4,<26",
  "typer>=0.15,<1",
  "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<1",
]

[project.scripts]
pm = "polymarket_app.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
namespace_packages = true
packages = ["polymarket_app"]
